Fix modal paragraph padding, modal header :after element and community header on mobile

--- a/website/source/stylesheets/components/_header.sass
+++ b/website/source/stylesheets/components/_header.sass
@@ -1,3 +1,9 @@
 .algc-mobilemenu img,
 .algc-mobilemenu svg
   margin: 0.65em 0
+
+.algc-navigation__brands .algc-navigation__li--community .algolia-community-logo
+  @media (max-width: $screen-sm)
+    max-height: 26px !important
+    margin-left: -10px !important
+    margin-top: 4px !important
