--- a/website/source/stylesheets/components/_modal.sass
+++ b/website/source/stylesheets/components/_modal.sass
@@ -38,6 +38,7 @@
       margin: -30px auto
       z-index: 10
       background: url(../images/css-logo-aprilfool.png)no-repeat center center / contain
+      transform: translateX(10px)
 
   .modal--inner
     overflow: auto
@@ -75,6 +76,7 @@
     font-size: 18px
     line-height: 1.67
     text-align: center
+    padding: 8px 16px
 
   .api-inte-list
     display: flex
